# tokr-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
cap-table/: package-lock.json  package.json
ci/: solana-version.sh
cli/: README.md  cli.js  cli.ts  package-lock.json  package.json
governance/: README.md
identity-verification/: Anchor.toml  README.md  package-lock.json  package.json
identity-verification/program/: Cargo.toml
identity-verification/program/src/: errors.rs  lib.rs
identity-verification/program/src/instructions/: create_record.rs  delete_record.rs  get_is_verified.rs  mod.rs  transfer_authority.rs  update_record.rs
identity-verification/program/src/state/: metadata.rs  mod.rs
permissioned-list/: Anchor.toml  package-lock.json  package.json  tsconfig.json
permissioned-list/program/: Cargo.toml
permissioned-list/program/src/: errors.rs  lib.rs
permissioned-list/program/src/instructions/: create_list.rs  delete_list.rs  remove_user.rs
permissioned-list/program/src/state/: entry_metadata.rs
programs/cap-table/program/: Cargo.toml  README.md
programs/cap-table/program/src/: errors.rs  lib.rs
programs/cap-table/program/src/instructions/: generate_cap_table.rs  mod.rs
programs/cap-table/program/src/state/: cap_table.rs  mod.rs
scripts/: clean-cli.js  clean-node.js  clean-programs.js  create-lending-market.ts  create-market-reserve.ts  create-token.ts  post-build.js  post-install.js  pre-test.js  relink-cli.js  relink.js  update-client-dependencies.js
whitelist/: Anchor.toml  (+1 more)
(+369 files in other folders)
